--- a/ML/vector_load.ipynb
+++ b/ML/vector_load.ipynb
@@ -1,6 +1,62 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kaggle Settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install tokenizers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/cgjeong23/Viral-genomic-classification.git virus\n",
+    "\n",
+    "%cd virus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_kaggle = True\n",
+    "\n",
+    "train_data_path = '../input/pacific-sra/trainingdata' if use_kaggle else 'trainingdata'\n",
+    "save_path = '/kaggle/working' if use_kaggle else 'assets'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -9,12 +65,12 @@
     "import torch\n",
     "import numpy as np\n",
     "\n",
-    "from inference import infer, load_for_inference\n",
-    "from dataloader import load_sequences\n",
+    "from ML.inference import infer, load_for_inference\n",
+    "from ML.dataloader import load_sequences\n",
     "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
-    "sequence, label = load_sequences('trainingdata')\n",
+    "sequence, label = load_sequences(train_data_path)\n",
     "\n",
     "label_index = {k: [] for k in set(label)}\n",
     "\n",
@@ -44,8 +100,9 @@
     "\n",
     "all_embeddings = torch.cat(all_embeddings, 0).numpy()\n",
     "\n",
-    "np.save('assets/virus_embeddings.npy', all_embeddings)\n",
-    "with open('assets/label.pkl','wb') as f:\n",
+    "\n",
+    "np.save(f'{save_path}/virus_embeddings.npy', all_embeddings)\n",
+    "with open(f'{save_path}/label.pkl','wb') as f:\n",
     "    pickle.dump(label, f)\n",
     "\n",
     "#PCA\n",
@@ -57,9 +114,9 @@
     "pca.fit(all_embeddings)\n",
     "embeddings_3d = pca.transform(all_embeddings)\n",
     "\n",
-    "np.save('assets/virus_embeddings_3d.npy',embeddings_3d)\n",
+    "np.save(f'{save_path}/virus_embeddings_3d.npy',embeddings_3d)\n",
     "\n",
-    "with open('assets/virus_pca.pkl','wb') as f:\n",
+    "with open(f'{save_path}/virus_pca.pkl','wb') as f:\n",
     "    pickle.dump(f,pca)"
    ]
   }
