--- a/ML/vector_load.ipynb
+++ b/ML/vector_load.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "use_kaggle = True\n",
     "\n",
-    "train_data_path = '../input/pacific-sra/trainingdata' if use_kaggle else 'trainingdata'\n",
+    "train_data_path = '../../input/pacific-sra/trainingdata' if use_kaggle else 'trainingdata'\n",
     "save_path = '/kaggle/working' if use_kaggle else 'assets'"
    ]
   },
@@ -64,6 +64,7 @@
    "source": [
     "import torch\n",
     "import numpy as np\n",
+    "import pickle\n",
     "\n",
     "from ML.inference import infer, load_for_inference\n",
     "from ML.dataloader import load_sequences\n",
@@ -84,7 +85,9 @@
     "sequence = [sequence[i] for i in sampled_index]\n",
     "label = [label[i] for i in sampled_index]\n",
     "\n",
-    "model, tokenizer, label_dict = load_for_inference('assets/model.pth','assets/gene_tokenizer.json','assets/label_dict.json')\n",
+    "model, tokenizer, label_dict = load_for_inference('ML/assets/model.pth',\n",
+    "                                                  'ML/assets/gene_tokenizer.json',\n",
+    "                                                  'ML/assets/label_dict.json')\n",
     "\n",
     "model = model.to(device)\n",
     "\n",
@@ -95,7 +98,10 @@
     "\n",
     "all_embeddings = []\n",
     "for i in range(num_batches):\n",
-    "    emb = infer(sequence[i * batch_size: (i+1) * batch_size], tokenizer, model.embedding, device=device)\n",
+    "    emb = infer(sequence[i * batch_size: (i+1) * batch_size], \n",
+    "                tokenizer, \n",
+    "                model.embedding, \n",
+    "                device=device)\n",
     "    all_embeddings.append(emb)\n",
     "\n",
     "all_embeddings = torch.cat(all_embeddings, 0).numpy()\n",
@@ -103,12 +109,23 @@
     "\n",
     "np.save(f'{save_path}/virus_embeddings.npy', all_embeddings)\n",
     "with open(f'{save_path}/label.pkl','wb') as f:\n",
-    "    pickle.dump(label, f)\n",
-    "\n",
-    "#PCA\n",
-    "\n",
+    "    pickle.dump(label, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Do PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.decomposition import PCA\n",
-    "import pickle\n",
     "\n",
     "pca = PCA(n_components=3) # reduce to 3d\n",
     "pca.fit(all_embeddings)\n",
