--- a/ML/vector_load.ipynb
+++ b/ML/vector_load.ipynb
@@ -104,7 +104,7 @@
     "                device=device)\n",
     "    all_embeddings.append(emb)\n",
     "\n",
-    "all_embeddings = torch.cat(all_embeddings, 0).numpy()\n",
+    "all_embeddings = torch.cat(all_embeddings, 0).cpu().numpy()\n",
     "\n",
     "\n",
     "np.save(f'{save_path}/virus_embeddings.npy', all_embeddings)\n",
@@ -134,7 +134,7 @@
     "np.save(f'{save_path}/virus_embeddings_3d.npy',embeddings_3d)\n",
     "\n",
     "with open(f'{save_path}/virus_pca.pkl','wb') as f:\n",
-    "    pickle.dump(f,pca)"
+    "    pickle.dump(pca, f)"
    ]
   }
  ],
