changed model path

--- a/ML/vector_load.ipynb
+++ b/ML/vector_load.ipynb
@@ -85,7 +85,7 @@
     "sequence = [sequence[i] for i in sampled_index]\n",
     "label = [label[i] for i in sampled_index]\n",
     "\n",
-    "model, tokenizer, label_dict = load_for_inference('ML/assets/model.pth',\n",
+    "model, tokenizer, label_dict = load_for_inference('ML/assets/sgrnn_ftrue.pth',\n",
     "                                                  'ML/assets/gene_tokenizer.json',\n",
     "                                                  'ML/assets/label_dict.json')\n",
     "\n",
@@ -139,14 +139,16 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "1242238a27090cfd0a9f95cca18072a5b0343382fab30269241b63569e4c53cd"
+  },
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('tf-m1')",
-   "language": "python",
+   "display_name": "Python 3.9.12 64-bit ('datascience': conda)",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.10"
+   "version": ""
   },
   "orig_nbformat": 4,
   "vscode": {
