changed model path

--- a/ML/vector_load.ipynb
+++ b/ML/vector_load.ipynb
@@ -85,7 +85,7 @@
     "sequence = [sequence[i] for i in sampled_index]\n",
     "label = [label[i] for i in sampled_index]\n",
     "\n",
-    "model, tokenizer, label_dict = load_for_inference('ML/assets/sgrnn_ftrue.pth',\n",
+    "model, tokenizer, label_dict = load_for_inference('ML/assets/sgrnn_emb_ftrue.pth',\n",
     "                                                  'ML/assets/gene_tokenizer.json',\n",
     "                                                  'ML/assets/label_dict.json')\n",
     "\n",
